fix: decrease font size to fit text in hero section on mobile devices

--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -122,7 +122,7 @@ body {
     justify-content: center;
 
     .mc-hero__title {
-      font-size: 2rem;
+      font-size: 1.9rem;
       margin-bottom: .5em;
     }
 
